Рефакторинг и readme
