# docs/swagger.json
@@ -22,18 +22,32 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "people"
                 ],
                 "summary": "Получить всех сотрудников",
                 "parameters": [
                     {
-                        "description": "Параметры фильтрации",
-                        "name": "filterParams",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controller.FilterParams"
-                        }
+                        "type": "integer",
+                        "example": 0,
+                        "description": "Страница",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "example": 5,
+                        "description": "Количество объектов на странице",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "name:Иванов",
+                        "description": "Фильтр (название параметра и параметр через двоеточие)",
+                        "name": "filter",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -71,12 +85,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "people"
                 ],
                 "summary": "Обновить информацию о сотруднике",
                 "parameters": [
                     {
-                        "description": "Информация о сотруднике",
+                        "description": "Информация о сотруднике (серия и номер не изменяются)",
                         "name": "people",
                         "in": "body",
                         "required": true,
@@ -112,12 +126,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "people"
                 ],
                 "summary": "Добавить сотрудника",
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1234 567890",
                         "description": "Номер паспорта (серия и номер через пробел)",
                         "name": "passportNumber",
                         "in": "query",
@@ -151,7 +166,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "employees"
+                    "people"
                 ],
                 "summary": "Удалить сотрудника",
                 "parameters": [
@@ -197,13 +212,12 @@
                 "summary": "Получить задачи сотрудника",
                 "parameters": [
                     {
-                        "description": "Информация о сотруднике",
-                        "name": "people",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.People"
-                        }
+                        "type": "integer",
+                        "example": 0,
+                        "description": "Идентификатор работника",
+                        "name": "people_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -244,13 +258,20 @@
                 "summary": "Добавить задачу",
                 "parameters": [
                     {
-                        "description": "Информация о задаче",
-                        "name": "task",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
+                        "type": "string",
+                        "example": "Новая задача",
+                        "description": "Название задачи",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "Описание...",
+                        "description": "Описание задачи",
+                        "name": "description",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -273,7 +294,7 @@
             }
         },
         "/taskAssign": {
-            "patch": {
+            "put": {
                 "description": "Назначает сотрудников на указанную задачу",
                 "consumes": [
                     "application/json"
@@ -287,13 +308,20 @@
                 "summary": "Назначить сотрудников на задачу",
                 "parameters": [
                     {
-                        "description": "Информация о задаче",
-                        "name": "task",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
+                        "type": "integer",
+                        "example": 0,
+                        "description": "Идентификатор задачи",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "example": 0,
+                        "description": "Идентификатор работника",
+                        "name": "people_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -316,7 +344,7 @@
             }
         },
         "/taskEnd": {
-            "patch": {
+            "put": {
                 "description": "Завершает отслеживание времени задачи",
                 "consumes": [
                     "application/json"
@@ -330,13 +358,12 @@
                 "summary": "Завершить задачу",
                 "parameters": [
                     {
-                        "description": "Информация о задаче",
-                        "name": "task",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
+                        "type": "integer",
+                        "example": 0,
+                        "description": "Идентификатор задачи",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -359,7 +386,7 @@
             }
         },
         "/taskStart": {
-            "patch": {
+            "put": {
                 "description": "Начинает отслеживание времени задачи",
                 "consumes": [
                     "application/json"
@@ -373,13 +400,12 @@
                 "summary": "Начать задачу",
                 "parameters": [
                     {
-                        "description": "Информация о задаче",
-                        "name": "task",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
+                        "type": "integer",
+                        "example": 0,
+                        "description": "Идентификатор задачи",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -408,25 +434,6 @@
             "properties": {
                 "error": {
                     "type": "string"
-                }
-            }
-        },
-        "controller.FilterParams": {
-            "type": "object",
-            "required": [
-                "page",
-                "page_size"
-            ],
-            "properties": {
-                "filters": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "page_size": {
-                    "type": "integer"
                 }
             }
         },
@@ -460,6 +467,9 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "duration": {
                     "type": "string"
                 },
                 "id": {
